# rwhs-basketball-livestream

./: README.md  srs.md
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml  livekit.yaml
backend/src/: config.rs  main.rs  routes.rs  websocket.rs
backend/src/handlers/: mod.rs  scores.rs  token.rs
backend/src/models/: mod.rs  scores.rs  token.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: style.css
frontend/src/: App.svelte  main.ts
frontend/src/components/: ConnectionStatus.svelte  ModeSwitcher.svelte  ScoreOverlay.svelte  SourceSelector.svelte  VideoDisplay.svelte
frontend/src/lib/: api.ts  debugger.ts  livekit.ts  utils.ts  websocket.ts
frontend/src/routes/: Admin.svelte  Camera.svelte  Output.svelte
frontend/src/stores/: connection.ts  mode.ts  page.ts  scores.ts  streams.ts
frontend/src/types/: env.d.ts
