[package]
name = "basketball-livestream-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# LiveKit integration
livekit-api = "0.2.0"
livekit-protocol = "0.2.0"

# Utilities
lazy_static = "1.4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment and configuration
dotenv = "0.15"
config = "0.13"

# Async utilities
futures = "0.3"
tokio-tungstenite = "0.21.0"
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Cryptography (for token generation)
jsonwebtoken = "9.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }